--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,33 @@
 body {
     font-family: "Open Sans", sans-serif;
+    background-color: #200800;
+    margin-top: 0;
+    padding-bottom: 0;
 }
 
-h1, h2, h3 {
-    font-family: "Lobster", cursive;
+#header h1, h3 {
+    font-family: "Open Sans", sans-serif;
+    color: whitesmoke;
+    padding-left: 100px;
+}
+
+h1 {
+    font-size: 60px;
+    font-weight: 800;
+}
+
+#header p {
+    font-family: "Open Sans", sans-serif;
+    font-size: 30px;
+    color: whitesmoke;
+    font-weight: 200;
+    padding-left: 100px;
+    padding-right: 50px;
+}
+#nav {
+    margin-top: 150px;
+    text-align: right;
+    padding-right: 50px;
 }
 
 h2 {
@@ -14,34 +38,27 @@ header h2 {
     color: #cec8ff;
 }
 
-footer {
-    background-image: linear-gradient(#cec8ff, white);
-    padding: 20px 0;
-}
-
 
 .row-content {
     padding: 50px 0;
     border-bottom: 1px ridge;
     min-height: 200px;
 }
-#video-background {
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    overflow: hidden;
-    z-index: 1;
-    width: 100%;
+
+div #id {
+    margin-top: 2rem;
 }
 
-.jumbotron {
-position: relative;
-overflow: hidden;
+.circle-icon {
+    background: #CE862B;
+    padding:25px;
+    border-radius: 50%;
+}
+ 
+.img-circle {
+   border-color: #cec8ff;
+   border-width: 5px;
 }
 
-.jumbotron .container {
-position: relative;
-z-index: 1;
-}
+  
+
