--- a/css/styles.css
+++ b/css/styles.css
@@ -16,28 +16,25 @@ h1 {
     font-weight: 800;
 }
 
-#header p {
-    font-family: "Open Sans", sans-serif;
+#heading {
+    font-family: "Poppins", sans-serif;
     font-size: 30px;
     color: whitesmoke;
     font-weight: 200;
-    padding-left: 100px;
-    padding-right: 50px;
-}
-#nav {
-    margin-top: 150px;
-    text-align: right;
-    padding-right: 50px;
+    margin-top: 50px;
+    text-align: center;
+    padding-bottom: 30px;
 }
 
-h2 {
-    color: #3046C5;
-}
 
 header h2 {
     color: #cec8ff;
 }
 
+.card-title h3 {
+color: black;
+margin-left: 0px;
+}
 
 .row-content {
     padding: 50px 0;
@@ -60,5 +57,87 @@ div #id {
    border-width: 5px;
 }
 
+#main {
+    margin-top: 100px;
+    margin-left: 100px;
+}
+.heading {
+    font-size: 70px;
+    font-weight: 700px;
+    font-style: inherit;
+    font-family: "Poppins", sans-serif;
+    text-align: center;
+    color: whitesmoke;
+    padding-left: 300px;
+    padding-bottom: 50px;
+}
   
+.card-header {
+    height: 50px;
+    font-family: "Open Sans", sans-serif;
+    font-size: 30px;
+    color: whitesmoke;
+    font-weight: 200;
+    background-color: #CE862B;
+    width: 800px;
+}
 
+/* link color*/
+a:link {
+    color: whitesmoke;
+  }
+
+ /* active link */
+ a:active {
+     background-color: grey;
+ }
+
+  /* visited link */
+a:visited {
+    color: whitesmoke;
+  }
+  
+  /* mouse over link */
+  a:hover {
+    color: #ffb400;
+  }
+  
+  .navbar-right {
+    margin-right: 0px; 
+}
+
+.home {
+    margin-top: 140px;
+}
+
+#nav {
+    /*margin-top: 0px;
+    text-align: right;
+    padding-right: 50px;*/
+    position: absolute;
+    right: 0px;
+    width: 300px;
+    padding: 10px;
+}
+
+#content {
+   /* background-color: white; */
+    margin-left: 50px;
+    margin-right: 50px;
+}
+/*
+#leftCol {
+    background-color: black;
+}
+
+#rtCol {
+    background-color: black;
+} */
+
+#front, p {
+    font-family: "Poppins", sans-serif;
+    font-size: 30px;
+    color: whitesmoke;
+    padding-left: 100px;
+    padding-top: 30px;
+}
